# memora-rs

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cache.rs  cli.rs  config.rs  error.rs  fs.rs  git.rs  lib.rs  main.rs  test_util.rs  util.rs
util/: build_cross_platform
