[package]
name = "memora"
description = "A build artifact cache for Git repositories"
version = "0.2.2-dev"
authors = ["Andreas Kurth"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/accuminium/memora-rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33"
Inflector = "0.11"
fs_extra = "1.1"
file-lock = "1.1"
